fixed img contrast, added greeting to profile based on User's Current Time

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,6 @@
   color: #fff;
   font-size: 100px;
 }
+.hd {
+  image-rendering: -webkit-optimize-contrast;
+}
