--- a/src/Components/Cards.css
+++ b/src/Components/Cards.css
@@ -188,3 +188,6 @@ h1 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+.hd {
+  image-rendering: -webkit-optimize-contrast;
+}
