--- a/src/Components/pages/Cart.css
+++ b/src/Components/pages/Cart.css
@@ -203,3 +203,6 @@
 .cursor-pointer {
   cursor: pointer;
 }
+.hd {
+  image-rendering: -webkit-optimize-contrast;
+}
